[package]
name = "venuscollect"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"
twapi-v2 = {version = "0.26", features = ["oauth10a"]}

