[package]
name = "venuscollect"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
twapi-v2 = {version = "0.26", features = ["oauth10a"]}
duckdb = { version = "1.4.4", features = ["bundled"] }
anyhow = "1.0.102"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
